Fix 11 accessibility, legibility, layout, and interaction design issues (#19)
* Initial plan

* Fix 11 accessibility and UX issues in Clocker Pomodoro app


---------

--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -10,6 +10,7 @@ $base-selector: ".timer";
   font-family: "Arial Rounded Bold", sans-serif;
   font-size: 7vw;
   font-weight: 900;
+  min-height: 1.2em;
 
   @include desktop {
     font-size: 8vw;
