--- a/src/shared/breakpoints.scss
+++ b/src/shared/breakpoints.scss
@@ -1,11 +1,11 @@
 @mixin mobile {
-  @media (max-width: 459px) {
+  @media (max-width: 479px) {
     @content;
   }
 }
 
 @mixin tablet {
-  @media (min-width: 460px) and (max-width: 767px) {
+  @media (min-width: 480px) and (max-width: 767px) {
     @content;
   }
 }
